--- a/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
@@ -1,3 +1,11 @@
+
+<div class="plus">
+
+	<i class="fa fa-edit" ng-reflect-ng-class="fa,fa-edit" (click)="selectLocality()"></i>
+
+</div>
+
+
 <div class="form-div">
     <form class="former">
     
@@ -34,37 +42,37 @@
     <div class="head">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" routerLink="/locality/option/Audit">Details</a>
+                <a class="nav-link" routerLink="/locality/tab/Audit">Details</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link hover" routerLink="/locality/option/Audit/find">Findings</a>
+                <a class="nav-link hover" routerLink="/locality/tab/Audit/find">Findings</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/Audit/recomendation">Recomendations</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit/recomendation">Recomendations</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/Audit/management">Management Response</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit/management">Management Response</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Action Plan</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit/action">Action Plan</a>
             </li>
             
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Business Risk</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit/brisk">Business Risk</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Security Risk</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit/srisk">Security Risk</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Budget</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit/budget">Budget</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Attachments</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit/attachment">Attachments</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/form2">Lessons Learned</a>
             </li>
         </ul>
     </div>
-   
+  <router-outlet></router-outlet>
 </div>
