--- a/src/app/locality-component/locality-tab/locality-business/locality-business.component.html
+++ b/src/app/locality-component/locality-tab/locality-business/locality-business.component.html
@@ -86,21 +86,21 @@
              <div class="form-row">
              <div class="form-group col-md-6">
                 <label for="lastName">Fiscal Year</label>
-                 <input type="text" class="form-control" id="vendorName" placeholder="Year" formControlName="name">
+                 <input type="text" class="form-control" id="vendorName" placeholder="Year" >
                  </div>
                  </div>
                  <p><b>Business Owner Vision</b></p>
                  <div class="form-row">
              <div class="form-group col-md-6">
                 <label for="lastName">Fiscal Year</label>
-                 <input type="text" class="form-control" id="vendorName" placeholder="Year" formControlName="name">
+                 <input type="text" class="form-control" id="vendorName" placeholder="Year">
                  </div>
                  </div>
                   <p><b>Business Owner Vision</b></p>
                   <div class="form-row">
              <div class="form-group col-md-6">
                 <label for="lastName">Fiscal Year</label>
-                 <input type="text" class="form-control" id="vendorName" placeholder="Year" formControlName="name">
+                 <input type="text" class="form-control" id="vendorName" placeholder="Year">
                  </div>
                  </div>
                  <hr/>
