--- a/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.html
+++ b/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.html
@@ -182,20 +182,20 @@
 		</thead>
 		<tbody>
 			<tr>
-				<th><a routerLink="/locality/option/link">Name</a></th>
+				<th><a routerLink="/locality/tab/link">Name</a></th>
 				<td>Mark</td>
 				<td>Otto</td>
 				<td>Otto</td>
 
 			</tr>
 			<tr>
-				<th><a routerLink="/locality/option">Name</a></th>
+				<th><a routerLink="/locality/tab/link">Name</a></th>
 				<td>Jacob</td>
 				<td>Thornton</td>
 				<td>Otto</td>
 			</tr>
 			<tr>
-				<th><a routerLink="/locality/option">Name</a></th>
+				<th><a routerLink="/locality/tab/link">Name</a></th>
 				<td>Larry</td>
 				<td>the Bird</td>
 				<td>Otto</td>
