--- a/src/app/locality-component/locality-tab/locality-solutionstablelink/locality-solutionstablelink.component.css
+++ b/src/app/locality-component/locality-tab/locality-solutionstablelink/locality-solutionstablelink.component.css
@@ -1,3 +1,18 @@
+
+
+
+ i.disabled {
+           pointer-events: none !important;
+           cursor: default;
+    }
+
+
+
+
+
+
+
+
 .form{
   padding: 20px;
   border-radius: 10px;
