--- a/src/app/policy-view-component/policy-view-forms-component/policy-view-forms-component.component.html
+++ b/src/app/policy-view-component/policy-view-forms-component/policy-view-forms-component.component.html
@@ -24,7 +24,8 @@
             	</div> -->
             	<div class="version form-group col-md-6">
             		<label class="label-form" for="updatedBy">Updated By</label><div class="asterisk">*</div>
-		              <input type="text" class="edit-disable form-control" id="updatedBy" readonly [(ngModel)] = "policyDisplay.updatedBy" [name] = "'updated_by'">
+		              <!-- <input type="text" class="edit-disable form-control" id="updatedBy" readonly [(ngModel)] = "policyDisplay.updatedBy" [name] = "'updated_by'"> -->
+		              <input type="text" class="edit-disable form-control" id="updatedBy" readonly [(ngModel)] = "date" [name] = "'updated_by'">
             	</div>
             	<!-- <div class="form-group col-md-6">
             <label class="label-form" for="Type/Policy">Type/Policy</label><div class="asterisk">*</div>
