--- a/src/app/locality-component/locality-tab/locality-audit/audit-management/audit-management.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/audit-management/audit-management.component.html
@@ -31,6 +31,15 @@
                <input type="text" class="form-control" id="lastName" value="mm/dd/yyyy">
             </div>
             </div>
+             <div class="form-row">
+            <div class="form-group col-md-6">
+
+                <label for="inputState">Description</label>
+               
+                 <textarea name="" id="" rows="10" class="form-control"></textarea> 
+            </div>
+            
+            </div>
             </form>
             </div>
 
