--- a/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.css
+++ b/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.css
@@ -12,3 +12,9 @@ i.fa {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.plus{
+	float:right;
+    font-size: 20px;
+    margin-right: 20px;
+    color: #3A539B;
+}
