--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.css
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.css
@@ -1,4 +1,13 @@
 
+
+
+.plus{
+	float:right;
+    font-size: 20px;
+    margin-right: 20px;
+    color: #3A539B;
+}
+
 .forms{
     padding: 20px;
     border-radius: 10px;
