--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
@@ -1,4 +1,13 @@
-<form class="former clear-right" (ngSubmit)="createSolution()" enctype="multipart/form-data">
+
+<div class="plus">
+
+	<i class="fa fa-edit" ng-reflect-ng-class="fa,fa-edit" (click)="selectLocality()"></i>
+
+</div>
+
+
+
+<form class="former clear-right" (ngSubmit)="createLocality()" enctype="multipart/form-data">
 
 	
 
@@ -16,12 +25,12 @@
 
 				<label for="inputState">Last Updated by</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="enter here" >
+				<input type="text" class="form-control"  >
 			</div>
 			<div class="form-group col-md-6">
 				<label for="lastName">Updated at</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="enter here">
+				<input type="text" class="form-control" name="updatedTime" [(ngModel)] = "updatedTime">
 			</div>
 		</div>
 		<div class="form-row">
@@ -29,7 +38,7 @@
 
 				<label for="inputState">Locality Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="enter here">
+				<input type="text" class="form-control" name="acronym" [(ngModel)] = "locality.acronym">
 			</div>
 			<div class="form-group col-md-6">
 
@@ -71,25 +80,25 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Email Id</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="enter here">
+				<input type="text" class="form-control" name="emailId" [(ngModel)] = "locality.emailId">
 			</div>
 			<div class="form-group col-md-6">
 
 				<label for="email">Phone No</label>
 				<div class="asterisk">*</div>
-				<input type="email" class="form-control" id="email" value="enter here">
+				<input type="email" class="form-control"  name="phoneNumber" [(ngModel)] = "locality.phoneNumber">
 			</div>
 		</div>
 		<div class="form-row">
 			<div class="form-group col-md-6">
 				<label for="lastName">Website Address</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="enter here">
+				<input type="text" class="form-control" name="websiteAdd" [(ngModel)] = "locality.website">
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Veris Id</label>
 				<div class="asterisk">*</div>
-				<input type="email" class="form-control" id="email" value="enter here">
+				<input type="email" class="form-control" name="verisId" [(ngModel)] = "locality.verisId">
 			</div>
 
 		</div>
@@ -101,23 +110,23 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Central Absentee Perceived(CAP)</label>
 				<div class="asterisk">*</div>
-				<input type="radio" name="yes" value="value">Yes<br>
+				<input type="radio" required [value]="true" name="capInd" [(ngModel)]="locality.capInd" [checked]="locality.capInd">Yes<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio" name="no" value="male"> No
+					type="radio" [value]="false" name="capInd" [(ngModel)] = "locality.capInd"  [checked]="locality.capInd"> No
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Bail out</label>
 				<div class="asterisk">*</div>
-				<input type="radio" name="yes" value="value">Yes<br>
+				<input type="radio"   [value]="true" name="bailoutInd" [(ngModel)] = "locality.bailoutInd" [checked]="locality.bailoutInd">Yes<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio" name="no" value="male"> No
+					type="radio"  [value]="false" name="bailoutInd" [(ngModel)] = "locality.bailoutInd" [checked]="locality.bailoutInd"> No
 			</div>
 		</div>
 		<div class="form-row">
 			<div class="form-group col-md-6">
 				<label for="lastName">Automate COMET/Penality</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="enter here">
+				<input type="text" class="form-control" name="penality" [(ngModel)] = "locality.penality">
 			</div>
 
 		</div>
@@ -239,8 +248,8 @@
 			<div class="form-group col-md-6">
 
 
-				<input type="radio" name="yes" value="value">VEBA region<br>
-				<input type="radio" name="no" value="male">VRAV region
+				<input type="radio"  value="true" name="vebaRegion" [(ngModel)] = "locality.vebaRegion">VEBA region<br>
+				<input type="radio" value="false" name="vravRegion" [(ngModel)] = "locality.vravRegion">VRAV region
 			</div>
 
 
@@ -254,23 +263,23 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Paper PollBook</label>
 				<div class="asterisk">*</div>
-				<input type="radio" name="yes" value="value">Yes<br>
+				<input type="radio" name="paperPollbook" value="true" [(ngModel)] = "locality.paperPollbook">Yes<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio" name="no" value="male"> No
+					type="radio" name="paperPollbook"  value="false" [(ngModel)] = "locality.paperPollbook"> No
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Electronic PollBook</label>
 				<div class="asterisk">*</div>
-				<input type="radio" name="yes" value="value">Yes<br>
+				<input type="radio" name="electronicPollbook" value="true" [(ngModel)] = "locality.electronicPollbook">Yes<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio" name="no" value="male"> No
+					type="radio" name="electronicPollbook" value="false" [(ngModel)] = "locality.electronicPollbook"> No
 			</div>
 </div>
 
 			<hr />
 		
          <p><b>Notes</b></p>
-         <textarea name="" id="" rows="10" class="form-control"></textarea>
+         <textarea name="" id="" rows="10" class="form-control" name="notes" [(ngModel)] = "locality.notes"></textarea>
          <div class="buttons">
       
         	<button type="submit" class="submit btn btn-primary" >Submit</button>
