--- a/src/app/locality-component/locality-tab/locality-solutionstablelink/locality-solutionstablelink.component.html
+++ b/src/app/locality-component/locality-tab/locality-solutionstablelink/locality-solutionstablelink.component.html
@@ -235,7 +235,7 @@
 					<div class="plus">
 
 				<i class="fa fa-plus-square-o" aria-hidden="true"
-					style="font-size: 24px;" (click)="open(content)" formControlName="plus"></i>
+					style="font-size: 24px;" (click)="open(content)"  [ngClass]="{ 'disabled ': solutionForm.disabled }"></i>
 
 			</div>
 				<table class="table table-striped table-hover table-bordere">
