--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -2,29 +2,29 @@
     <div class="head">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" routerLink="/locality/option"> <i class="fa fa-info-circle"></i>Information </a>
+                <a class="nav-link" routerLink="/locality/tab/info/{{loc}}"> <i class="fa fa-info-circle"></i>Information </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link hover" routerLink="/locality/map/option/solutions"><i class="fa fa-info-circle"></i>Solutions</a>
+                <a class="nav-link hover" routerLink="/locality/tab/solutions"><i class="fa fa-info-circle"></i>Solutions</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link "  routerLink="/locality/map/option/legal"><i class="fa fa-info-circle"></i>Legal</a>
+                <a class="nav-link "  routerLink="/locality/tab/legal"><i class="fa fa-info-circle"></i>Legal</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/Audit"><i class="fa fa-bell"></i>Audit/Compliance</a>
+                <a class="nav-link " routerLink="/locality/tab/Audit"><i class="fa fa-bell"></i>Audit/Compliance</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Assessment</a>
+                <a class="nav-link ">Assessment</a>
             </li>
             
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Security</a>
+                <a class="nav-link " routerLink="/locality/tab/security">Security</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Technical</a>
+                <a class="nav-link ">Technical</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link "  routerLink="/locality/option/business"><i class="fa fa-building-o"></i>Business</a> 
+              <a class="nav-link "  routerLink="/locality/tab/business"><i class="fa fa-building-o"></i>Business</a> 
             </li>
         </ul>
     </div>
