--- a/src/app/locality-component/locality-tab/locality-audit/audit-management/audit-management.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/audit-management/audit-management.component.html
@@ -2,6 +2,7 @@
 </div>
  
 <div class="panel-heading">
+	<div class="policy-edit">
 						      	<span class=" title elipsis pull-right">
 						      		<a title="Application audit history">
 									<i class="fa fa-history" aria-hidden="true" style="font-size: 24px;"></i></a>
@@ -17,6 +18,9 @@
 						      	
 						      	
 						      </div>
+						      <hr/>
+						      </div>
+					
 						     
 <div class="form-div">    <form class="former">    
         <div class="form-row">
