--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.css
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.css
@@ -17,6 +17,9 @@
     overflow: hidden;
 }
 
+.form-control:disabled, .form-control[readonly] {
+    background-color: #ffffff;
+}
 
 .clear-right {
 	clear:right;
