--- a/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.css
+++ b/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.css
@@ -2,19 +2,27 @@ i.fa {
     text-decoration: none !important;
     padding: 5px 4px;
 }
-
-
 .fa {
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
     text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+   }
 .plus{
 	float:right;
     font-size: 20px;
     margin-right: 20px;
     color: #3A539B;
+}
+
+.nav-link{
+	color: black;
+	margin-left: 10px;
+}
+.icons{
+    vertical-align: middle;
+    font-size: 20px;
+    margin-bottom: 20px;
+    padding: 2px;
+    margin-left: 5px;
 }
