--- a/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
@@ -1,7 +1,7 @@
 
 <div class="plus">
 
-	<i class="fa fa-edit" ng-reflect-ng-class="fa,fa-edit" (click)="selectLocality()"></i>
+	<fa class="edit-icon icons" [name]="'edit'"></fa>
 
 </div>
 
@@ -42,35 +42,35 @@
     <div class="head">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" routerLink="/locality/tab/Audit">Details</a>
+                <a class="nav-link active"  routerLinkActive="active" routerLink="/locality/tab/Audit" [routerLinkActiveOptions]="{exact: true}">Details</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link hover" routerLink="/locality/tab/Audit/find">Findings</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/tab/Audit/find">Findings</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/tab/Audit/recomendation">Recomendations</a>
+                <a class="nav-link" routerLinkActive="active"  routerLink="/locality/tab/Audit/recomendation">Recomendations</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/tab/Audit/management">Management Response</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/tab/Audit/management">Management Response</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/tab/Audit/action">Action Plan</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/tab/Audit/action">Action Plan</a>
             </li>
             
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/tab/Audit/brisk">Business Risk</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/tab/Audit/brisk">Business Risk</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/tab/Audit/srisk">Security Risk</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/tab/Audit/srisk">Security Risk</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/tab/Audit/budget">Budget</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/tab/Audit/budget">Budget</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/tab/Audit/attachment">Attachments</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/tab/Audit/attachment">Attachments</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Lessons Learned</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/locality/option/form2">Lessons Learned</a>
             </li>
         </ul>
     </div>
