--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
@@ -1,17 +1,31 @@
 
-<div class="plus">
 
-	<i class="fa fa-edit" ng-reflect-ng-class="fa,fa-edit" (click)="selectLocality()"></i>
 
+<ng-template #content let-c="close" let-d="dismiss">
+<div class="modal-header">
+  <h4 class="modal-title">Success</h4>
+<!--   <button type="button" class="close" aria-label="Close" (click)="d()"> -->
+<!--     <span aria-hidden="true">&times;</span> -->
+<!--   </button> -->
 </div>
+<div class="modal-body">
+  <p>{{contentData}}</p>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-outline-dark" (click)="c();redirect()">Ok</button>
+</div>
+</ng-template>
+<div class="save-edit" style="float: right" *ngIf="viewType == 'view'">
+		<fa class="edit-icon icons" data-toggle="tooltip"
+			data-placement="right" title="Save" data-animation="true"
+			data-delay="0" [name]="'edit'" (click)="editClick()"></fa>
+	</div>
 
-
-
-<form class="former clear-right" (ngSubmit)="createLocality()" enctype="multipart/form-data">
-
+<form #formName = "ngForm" class="former clear-right"  (ngSubmit)="createLocality()" enctype="multipart/form-data">
+<fieldset [disabled]="editableForm">
 	
 
-		<div class="tip">
+		<div class="tip"> 
 			<p class="tip-text">
 				<fa class="light-bulb" [name]="'lightbulb-o'"></fa>
 				Tip:
@@ -30,7 +44,7 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Updated at</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="updatedTime" [(ngModel)] = "updatedTime">
+				<input type="text" class="form-control" ngModel name="updatedTime" [(ngModel)] = "updatedTime">
 			</div>
 		</div>
 		<div class="form-row">
@@ -38,13 +52,13 @@
 
 				<label for="inputState">Locality Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="acronym" [(ngModel)] = "locality.acronym">
+				<input type="text" class="form-control" ngModel name="acronym" [(ngModel)] = "locality.acronym">
 			</div>
 			<div class="form-group col-md-6">
 
 				<label for="inputState">Locality Code</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="localityCd" [(ngModel)] = "locality.localityCd">
+				<input type="text" class="form-control" ngModel name="localityCd" [(ngModel)] = "locality.localityCd">
 			</div>
 
 		</div>
@@ -52,7 +66,7 @@
 
 			<div class="form-group col-md-6">
 				<label for="lastName">FIPS Code</label> <input type="text"
-					class="form-control" name="fipsCd" [(ngModel)] = "locality.fipsCd">
+					class="form-control" ngModel name="fipsCd" [(ngModel)] = "locality.fipsCd">
 
 			</div>
 		</div>
@@ -65,12 +79,12 @@
 
 				<label for="inputState">First Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="firstName" [(ngModel)] = "locality.firstName">
+				<input type="text" class="form-control" ngModel name="firstName" [(ngModel)] = "locality.firstName">
 			</div>
 			<div class="form-group col-md-6">
 				<label for="lastName">Last Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="lastName" [(ngModel)] = "locality.lastName">
+				<input type="text" class="form-control" ngModel name="lastName" [(ngModel)] = "locality.lastName">
 			</div>
 		</div>
 
@@ -80,25 +94,25 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Email Id</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="emailId" [(ngModel)] = "locality.emailId">
+				<input type="text" class="form-control" ngModel name="emailId" [(ngModel)] = "locality.emailId">
 			</div>
 			<div class="form-group col-md-6">
 
 				<label for="email">Phone No</label>
 				<div class="asterisk">*</div>
-				<input type="email" class="form-control"  name="phoneNumber" [(ngModel)] = "locality.phoneNumber">
+				<input type="email" class="form-control"  ngModel name="phoneNumber" [(ngModel)] = "locality.phoneNumber">
 			</div>
 		</div>
 		<div class="form-row">
 			<div class="form-group col-md-6">
 				<label for="lastName">Website Address</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="websiteAdd" [(ngModel)] = "locality.website">
+				<input type="text" class="form-control" ngModel name="websiteAdd" [(ngModel)] = "locality.website">
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Veris Id</label>
 				<div class="asterisk">*</div>
-				<input type="email" class="form-control" name="verisId" [(ngModel)] = "locality.verisId">
+				<input type="email" class="form-control" ngModel name="verisId" [(ngModel)] = "locality.verisId">
 			</div>
 
 		</div>
@@ -110,23 +124,23 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Central Absentee Perceived(CAP)</label>
 				<div class="asterisk">*</div>
-				<input type="radio" required [value]="true" name="capInd" [(ngModel)]="locality.capInd" [checked]="locality.capInd">Yes<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio" [value]="false" name="capInd" [(ngModel)] = "locality.capInd"  [checked]="locality.capInd"> No
+				<input type="radio" required [value]="true" ngModel name="capInd" [(ngModel)]="locality.capInd" [checked]="locality.capInd">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio" [value]="false" ngModel name="capInd" [(ngModel)] = "locality.capInd"  [checked]="locality.capInd"> No
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Bail out</label>
 				<div class="asterisk">*</div>
-				<input type="radio"   [value]="true" name="bailoutInd" [(ngModel)] = "locality.bailoutInd" [checked]="locality.bailoutInd">Yes<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio"  [value]="false" name="bailoutInd" [(ngModel)] = "locality.bailoutInd" [checked]="locality.bailoutInd"> No
+				<input type="radio"   [value]="true" ngModel name="bailoutInd" [(ngModel)] = "locality.bailoutInd" [checked]="locality.bailoutInd">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio"  [value]="false" ngModel name="bailoutInd" [(ngModel)] = "locality.bailoutInd" [checked]="locality.bailoutInd"> No
 			</div>
 		</div>
 		<div class="form-row">
 			<div class="form-group col-md-6">
 				<label for="lastName">Automate COMET/Penality</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" name="penality" [(ngModel)] = "locality.penality">
+				<input type="text" class="form-control" ngModel name="penality" [(ngModel)] = "locality.penality">
 			</div>
 
 		</div>
@@ -248,8 +262,8 @@
 			<div class="form-group col-md-6">
 
 
-				<input type="radio"  value="true" name="vebaRegion" [(ngModel)] = "locality.vebaRegion">VEBA region<br>
-				<input type="radio" value="false" name="vravRegion" [(ngModel)] = "locality.vravRegion">VRAV region
+				<input type="radio"  [value]="true" ngModel  name="vebaRegion" [(ngModel)] = "locality.vebaRegion" [checked]="locality.vebaRegion">VEBA region<br>
+				<input type="radio" [value]="false" ngModel name="vravRegion" [(ngModel)] = "locality.vravRegion" [checked]="locality.vravRegion">VRAV region
 			</div>
 
 
@@ -263,29 +277,29 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Paper PollBook</label>
 				<div class="asterisk">*</div>
-				<input type="radio" name="paperPollbook" value="true" [(ngModel)] = "locality.paperPollbook">Yes<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio" name="paperPollbook"  value="false" [(ngModel)] = "locality.paperPollbook"> No
+				<input type="radio" ngModel name="paperPollbook" [value]="true" [(ngModel)] = "locality.paperPollbook" [checked]="locality.paperPollbook">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio" ngModel name="paperPollbook"  [value]="false" [(ngModel)] = "locality.paperPollbook" [checked]="locality.paperPollbook"> No
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Electronic PollBook</label>
 				<div class="asterisk">*</div>
-				<input type="radio" name="electronicPollbook" value="true" [(ngModel)] = "locality.electronicPollbook">Yes<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
-					type="radio" name="electronicPollbook" value="false" [(ngModel)] = "locality.electronicPollbook"> No
+				<input type="radio" ngModel name="electronicPollbook" [value]="true" [(ngModel)] = "locality.electronicPollbook" [checked]="locality.electronicPollbook">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio" ngModel name="electronicPollbook" [value]="false" [(ngModel)] = "locality.electronicPollbook" [checked]="locality.electronicPollbook"> No
 			</div>
 </div>
 
 			<hr />
 		
          <p><b>Notes</b></p>
-         <textarea name="" id="" rows="10" class="form-control" name="notes" [(ngModel)] = "locality.notes"></textarea>
+         <textarea name="" id="" rows="10" class="form-control"  name="notes" [(ngModel)] = "locality.notes"></textarea>
          <div class="buttons">
       
-        	<button type="submit" class="submit btn btn-primary" >Submit</button>
+        	<button type="submit" class="submit btn btn-primary">Submit</button>
         	<button type="cancel" class="cancel btn btn-primary">Cancel</button>
         </div>
 		
-
+</fieldset>
 
 	</form>
