--- a/src/app/locality-view-component/locality-view-component.component.html
+++ b/src/app/locality-view-component/locality-view-component.component.html
@@ -1,3 +1,263 @@
 <app-navigation-component></app-navigation-component>
 <app-option-list></app-option-list>
 <!-- <app-view-table></app-view-table> -->
+<form class="former">
+   
+<img src="assets/img/Webp.net-resizeimage.gif" usemap="#image-map">
+<img src="assets/img/virginia-map.jpg" width=460px height=570px usemap="#image-map">
+<map name="image-map">
+    <area target="" alt="Lee" title="Lee" href="Lee" coords="18,493,123,537" shape="rect">
+    <area target="" alt="Scott" title="Scott" href="Scott" coords="128,542,214,500" shape="rect">
+    <area target="" alt="Washington" title="Washington" href="Washington" coords="231,534,314,487" shape="rect">
+    <area target="" alt="Smyth" title="Smyth" href="Smyth" coords="317,472,366,520" shape="rect">
+    <area target="" alt="grayson" title="grayson" href="Grayson" coords="323,521,437,545" shape="rect">
+    <area target="" alt="Caroll" title="Caroll" href="Caroll" coords="443,493,492,543" shape="rect">
+    <area target="" alt="Patrick" title="Patrick" href="Patrick" coords="502,551,568,497" shape="rect">
+    <area target="" alt="Henry" title="Henry" href="Henry" coords="575,513,617,551" shape="rect">
+    <area target="" alt="PittsIvania" title="PittsIvania" href="Pittsivania" coords="634,539,716,456" shape="rect">
+    <area target="" alt="Halifax" title="Halifax" href="Halifax" coords="719,550,776,467" shape="rect">
+    <area target="" alt="Macklenburg" title="Macklenburg" href="Macklenburg" coords="787,555,878,495" shape="rect">
+    <area target="" alt="Brunswick" title="Brunswick" href="Brunswick" coords="889,472,942,538" shape="rect">
+    <area target="" alt="Greenville" title="Greenville" href="Greensville" coords="947,497,982,549" shape="rect">
+    <area target="" alt="SouthHampton" title="SouthHampton" href="Southhampton" coords="993,550,1059,490" shape="rect">
+    <area target="" alt="Wise" title="Wise" href="Wise" coords="105,445,181,489" shape="rect">
+    <area target="" alt="Dickerson" title="Dickerson" href="Dickerson" coords="183,415,232,460" shape="rect">
+    <area target="" alt="Bucharan" title="Bucharan" href="Bucharan" coords="233,367,298,438" shape="rect">
+    <area target="" alt="Tazwell" title="Tazwell" href="Tazwell" coords="290,418,367,459" shape="rect">
+    <area target="" alt="Bland" title="Bland" href="Bland" coords="366,418,432,454" shape="rect">
+    <area target="" alt="Russell" title="Russell" href="Russell" coords="227,486,293,458" shape="rect">
+    <area target="" alt="Wythe" title="Wythe" href="Wythe" coords="373,502,436,462" shape="rect">
+    <area target="" alt="Glles" title="Glles" href="Glles" coords="435,429,497,378" shape="rect">
+    <area target="" alt="Pulaski" title="Pulaski" href="Pulaski" coords="444,436,491,486" shape="rect">
+    <area target="" alt="Montgomery" title="Montgomery" href="Montgomery" coords="497,458,533,403" shape="rect">
+    <area target="" alt="Floyd" title="Floyd" href="Floyd" coords="553,463,496,494" shape="rect">
+    <area target="" alt="Craig" title="Craig" href="Craig" coords="505,400,570,358" shape="rect">
+    <area target="" alt="Franklin" title="Franklin" href="Franklin" coords="565,454,629,498" shape="rect">
+    <area target="" alt="Renoeke" title="Renoeke" href="Renoeke" coords="537,418,592,448" shape="rect">
+    <area target="" alt="Bedford" title="Bedford" href="Bedford" coords="612,455,687,366" shape="rect">
+    <area target="" alt="campbell" title="campbell" href="Campbell" coords="689,393,755,453" shape="rect">
+    <area target="" alt="Charlotte" title="Charlotte" href="Charlotte" coords="760,433,818,473" shape="rect">
+    <area target="" alt="Prince Edward" title="Prince Edward" href="Prince Edward" coords="801,405,856,439" shape="rect">
+    <area target="" alt="Botetourt" title="Botetourt" href="Botetourt" coords="583,389,634,335" shape="rect">
+    <area target="" alt="Amherst" title="Amherst" href="Amherst" coords="680,376,741,332" shape="rect">
+    <area target="" alt="Bukingham" title="Bukingham" href="Bukingham" coords="787,388,836,330" shape="rect">
+    <area target="" alt="Appomatox" title="Appomatox" href="Appomatox" coords="743,366,789,421" shape="rect">
+    <area target="" alt="Nelson" title="Nelson" href="Nelson" coords="713,330,778,299" shape="rect">
+    <area target="" alt="Lunenburg" title="Lunenburg" href="Lunenburg" coords="823,454,879,492" shape="rect">
+    <area target="" alt="Dimwiddle" title="Dimwiddle" href="Dimwiddle" coords="917,426,991,473" shape="rect">
+    <area target="" alt="Sussex" title="Sussex" href="Sussex" coords="980,486,1059,458" shape="rect">
+    <area target="" alt="prince george" title="prince george" href="prince george" coords="995,416,1046,451" shape="rect">
+    <area target="" alt="Surry" title="Surry" href="Surry" coords="1058,425,1096,462" shape="rect">
+    <area target="" alt="Isle of wight" title="Isle of wight" href="Isle of wight" coords="1069,468,1113,513" shape="rect">
+    <area target="" alt="Alleghany" title="Alleghany" href="Alleghany" coords="515,300,575,347" shape="rect">
+    <area target="" alt="Bath" title="Bath" href="Bath" coords="592,236,646,288" shape="rect">
+    <area target="" alt="Rockbridge" title="Rockbridge" href="Rockbridge" coords="633,285,695,343" shape="rect">
+    <area target="" alt="Highland" title="Highland" href="Highland" coords="611,231,675,185" shape="rect">
+    <area target="" alt="Augusta" title="Augusta" href="Augusta" coords="679,281,764,211" shape="rect">
+    <area target="" alt="Rockingham" title="Rockingham" href="Rockingham" coords="690,135,790,207" shape="rect">
+    <area target="" alt="Greene" title="Greene" href="Greene" coords="791,212,838,241" shape="rect">
+    <area target="" alt="Albermarle" title="Albermarle" href="Albermarle" coords="775,295,847,247" shape="rect">
+    <area target="" alt="Ruyama" title="Ruyama" href="Ruyama" coords="823,328,872,298" shape="rect">
+    <area target="" alt="Goochland" title="Goochland" href="Goochland" coords="876,308,945,347" shape="rect">
+    <area target="" alt="Cumberland" title="Cumberland" href="Cumberland" coords="840,398,868,336" shape="rect">
+    <area target="" alt="Powhatan" title="Powhatan" href="Powhatan" coords="875,350,937,378" shape="rect">
+    <area target="" alt="Amelia" title="Amelia" href="Amelia" coords="872,386,939,422" shape="rect">
+    <area target="" alt="Chesterfield" title="Chesterfield" href="Chesterfield" coords="943,373,984,424" shape="rect">
+    <area target="" alt="Shenandoah" title="Shenandoah" href="Shenandoah" coords="760,132,836,85" shape="rect">
+    <area target="" alt="Page" title="Page" href="Page" coords="794,191,835,136" shape="rect">
+    <area target="" alt="Madison" title="Madison" href="Madison" coords="840,169,871,223" shape="rect">
+    <area target="" alt="Orange" title="Orange" href="Orange" coords="853,248,918,226" shape="rect">
+    <area target="" alt="Louisa" title="Louisa" href="Louisa" coords="857,259,934,303" shape="rect">
+    <area target="" alt="Fredrick" title="Fredrick" href="Fredrick" coords="796,74,858,14" shape="rect">
+    <area target="" alt="Warren" title="Warren" href="Warren" coords="841,117,881,83" shape="rect">
+    <area target="" alt="Rappahannock" title="Rappahannock" href="Rappahannock" coords="849,164,887,127" shape="rect">
+    <area target="" alt="Culpeper" title="Culpeper" href="Culpeper" coords="871,168,926,203" shape="rect">
+    <area target="" alt="Clarke" title="Clarke" href="Clarke" coords="882,79,912,48" shape="rect">
+    <area target="" alt="Fauquier" title="Fauquier" href="Fauquier" coords="891,90,953,164" shape="rect">
+    <area target="" alt="Spotsylvania" title="Spotsylvania" href="Spotsylvania" coords="925,255,968,222" shape="rect">
+    <area target="" alt="Caroline" title="Caroline" href="Caroline" coords="974,301,1028,245" shape="rect">
+    <area target="" alt="Hanover" title="Hanover" href="Hanover" coords="948,301,995,329" shape="rect">
+    <area target="" alt="Henrico" title="Henrico" href="Henrico" coords="945,331,994,355" shape="rect">
+    <area target="" alt="New Kent" title="New Kent" href="New Kent" coords="1085,386,1022,355,1311,543" shape="rect">
+    <area target="" alt="Charles City" title="Charles City" href="Charles City" coords="1018,388,1068,413" shape="rect">
+    <area target="" alt="King William" title="King William" href="King William" coords="1006,310,1042,347" shape="rect">
+    <area target="" alt="King and Queen" title="King and Queen" href="King and Queen" coords="1078,351,1046,320" shape="rect">
+    <area target="" alt="Loudoun" title="Loudoun" href="Loudoun" coords="926,88,978,38" shape="rect">
+    <area target="" alt="Prince William" title="Prince William" href="Prince William" coords="959,134,1002,171" shape="rect">
+    <area target="" alt="Fairfax" title="Fairfax" href="Fairfax" coords="976,94,1041,130" shape="rect">
+    <area target="" alt="Stafford" title="Stafford" href="Stafford" coords="955,176,1000,211" shape="rect">
+    <area target="" alt="King George" title="King George" href="King George" coords="1008,212,1052,234" shape="rect">
+    <area target="" alt="Essex" title="Essex" href="Essex" coords="1042,265,1070,307" shape="rect">
+    <area target="" alt="Montross" title="Montross" href="Montross" coords="1053,241,1114,261" shape="rect">
+    <area target="" alt="Henrico" title="Henrico" href="Henrico" coords="1076,272,1116,302" shape="rect">
+    <area target="" alt="Lancaster" title="Lancaster" href="Lancaster" coords="1112,340,1150,312" shape="rect">
+    <area target="" alt="Northumberland" title="Northumberland" href="Northumberland" coords="1121,277,1166,307" shape="rect">
+    <area target="" alt="Saluda" title="Saluda" href="Saluda" coords="1144,362,1097,342" shape="rect">
+    <area target="" alt="Gloucester" title="Gloucester" href="Gloucester" coords="1106,368,1136,407" shape="rect">
+    <area target="" alt="Yorktown" title="Yorktown" href="Yorktown" coords="1105,412,1142,441" shape="rect">
+    <area target="" alt="Accomack" title="Accomack" href="Accomack" coords="1294,272,1235,359" shape="rect">
+    <area target="" alt="Mathews" title="Mathews" href="Mathews" coords="1140,368,1162,393" shape="rect">
+    <area target="" alt="Northampton" title="Northampton" href="Northampton" coords="1237,367,1204,437" shape="rect">
+    <area target="" alt="Nottoway" title="Nottoway" href="Nottoway" coords="862,426,894,451" shape="rect">
+    <area target="" alt="Suffolk" title="Suffolk" href="Suffolk" coords="1072,547,1130,516" shape="rect">
+    <area target="" alt="" title="" href="" coords="" shape="rect">
+    <area target="" alt="Portsmouth" title="Portsmouth" href="Portsmouth" coords="1148,493,1166,506" shape="rect">
+    <area target="" alt="Chesapeake" title="Chesapeake" href="Chesapeake" coords="1137,510,1185,551" shape="rect">
+    <area target="" alt="Norfolk" title="Norfolk" href="Norfolk" coords="1159,475,1177,490" shape="rect">
+    <area target="" alt="Virginia Beach" title="Virginia Beach" href="Virginia Beach" coords="1189,483,1213,544" shape="rect">
+    <area target="" alt="Richmond" title="Richmond" href="Richmond" coords="958,357,992,369" shape="rect">
+    <area target="" alt="Lynchburg" title="Lynchburg" href="Lynchburg" coords="692,379,724,390" shape="rect">
+    <area target="" alt="Roanoke" title="Roanoke" href="Roanoke" coords="565,405,601,415" shape="rect">
+    <area target="" alt="Covington" title="Covington" href="Covington" coords="585,310,578,329" shape="rect">
+    <area target="" alt="Clifton Forge" title="Clifton Forge" href="Clifton Forge" coords="617,301,594,317" shape="rect">
+    <area target="" alt="Danville" title="Danville" href="Danville" coords="643,541,686,553" shape="rect">
+    <area target="" alt="Bristol" title="Bristol" href="Bristol" coords="228,545,264,537" shape="rect">
+    <area target="" alt="Hampton" title="Hampton" href="Hampton" coords="1123,445,1171,462" shape="rect">
+</map>
+
+</form>
+<form class="former">
+ <div class="page-description">
+       
+    </div>
+   
+    <div class="form-row">
+        <div class="form-group col-md-6">
+
+            <label class="label" for="modelSolution"><b>Please Select Your Locality </b></label>
+            <div class="asterisk">*</div>
+            <select class="form-control" id="modelSolution" (change)="selectLocal($event.target.value)">
+          <option selected>Choose...</option>
+          <option  *ngFor="let county of counties">
+          {{ county.county_name}}
+          </option> 
+        </select>
+        </div>
+
+    </div>
+
+</form>
+
+
+
+
+<!--<div class="form-div" *ngIf = "showForm == 'locality2'">
+    <form class="former">
+      locality2
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputState">Country Name</label><div class="asterisk">*</div>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>...</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="lastName">City</label>
+          <input type="text" class="form-control" id="lastName" value="Value">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="email">Email ID</label><div class="asterisk">*</div>
+          <input type="email" class="form-control" id="email" value="Value">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="phone">Phone Number</label><div class="asterisk">*</div>
+          <input type="text" class="form-control" id="phone" value="Value">
+        </div>
+      </div>
+
+      <p><b>Address</b></p>
+      <div class="form-group">
+        <label for="inputAddress">Street Name</label><div class="asterisk">*</div>
+        <input type="text" class="form-control" id="inputAddress" value="Value" >
+        <label for="city">City</label>
+        <input type="text" class="form-control" id="city" value="Value">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputState">State</label><div class="asterisk">*</div>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>...</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputZip">Zip Code</label><div class="asterisk">*</div>
+          <input type="text" class="form-control" id="inputZip" valu="00000">
+
+
+          <div class="buttons">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="cancel" class="btn btn-primary">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+
+
+
+  <div class="form-div" *ngIf = "showForm == 'locality3'">
+    <form class="former">
+      locality3
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputState">Country Name</label>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>...</option>
+          </select>
+        </div>
+
+
+
+
+
+        <div class="form-group col-md-6">
+          <label for="lastName">City</label>
+          <input type="text" class="form-control" id="lastName" value="Value">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="email">Email ID</label>
+          <input type="email" class="form-control" id="email" value="Value">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="phone">Phone Number</label>
+          <input type="text" class="form-control" id="phone" value="Value">
+        </div>
+      </div>
+
+      <p><b>Address</b></p>
+      <div class="form-group">
+        <label for="inputAddress">Street Name</label>
+        <input type="text" class="form-control" id="inputAddress" value="Value" >
+        <label for="city">City</label>
+        <input type="text" class="form-control" id="city" value="Value">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputState">State</label>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>...</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputZip">Zip Code</label>
+          <input type="text" class="form-control" id="inputZip" valu="00000">
+
+
+          <div class="buttons">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="cancel" class="btn btn-primary">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>-->
